Updated History Page

--- a/history.html
+++ b/history.html
@@ -12,9 +12,17 @@
     />
     <title>History</title>
   </head>
-  <body>
-    <div class="sticky-top" style="background-color: white">
-      <div class="container">
+  <style>
+    p {
+      max-width: 75ch;
+    }
+    body {
+      background-color: #ccc;
+    }
+  </style>
+  <body class="container">
+    <nav class="sticky-top">
+      <div>
         <header
           class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom"
         >
@@ -26,19 +34,102 @@
           </a>
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a href="home.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="food.html" class="nav-link">Food</a>
+              <a href="history.html" class="nav-link active">History</a>
             </li>
             <li class="nav-item">
-              <a href="places.html" class="nav-link active" aria-current="page"
+              <a href="gallery.html" class="nav-link" aria-current="page"
                 >Location</a
               >
             </li>
           </ul>
         </header>
       </div>
-    </div>
+    </nav>
+
+    <main>
+      <h1 class="text-center mt-5">History of Bennet Park</h1>
+
+      <section class="info py-5">
+        <h2>James Gordon Bennet</h2>
+        <hr />
+        <article class="top d-flex justify-content-between">
+          <div class="textContent">
+            <p class="me-5">
+              James Gordon Bennett Sr. (September 1, 1795 - June 1, 1872) was
+              the founder, editor and publisher of the New York Herald and a
+              major figure in the history of American newspapers.
+            </p>
+            <p class="me-5">
+              Bennett was born to a prosperous Roman Catholic family in Newmill,
+              Banffshire, Scotland, Great Britain. At age 15, Bennett entered
+              the Roman Catholic seminary in Aberdeen, where he remained for
+              four years. After leaving the seminary, he read voraciously on his
+              own and traveled throughout Scotland.
+            </p>
+            <p class="me-5">
+              In 1819, he joined a friend who was sailing to North America.
+              After four weeks they landed in Halifax, Nova Scotia, where
+              Bennett briefly worked as a schoolmaster till he had enough money
+              to sail south to Portland, Maine, where he again taught school in
+              the village of Addison, moving on to Boston, Massachusetts by New
+              Year's Day, 1820. He worked in New England as a proofreader and
+              bookseller before the Charleston Courier in Charleston, South
+              Carolina hired him to translate Spanish language news reports, so
+              he briefly relocated to the South. He moved back north to New York
+              City in 1823, where he worked first as a freelance paper writer
+              and, then, assistant editor of the New York Courier and Enquirer,
+              one of the oldest newspapers in the city.
+            </p>
+            <!-- <p class="me-5">
+              Bennett Park, also known as James Gordon Bennett Park, is a
+              1.8-acre (0.73 ha) public park in New York City, named for James
+              Gordon Bennett, Sr., the newspaper publisher who launched the New
+              York Herald in 1835. It is located between Pinehurst and Fort
+              Washington Avenues and West 183rd and 185th Streets in the Hudson
+              Heights neighborhood of Washington Heights in northern Manhattan,
+              on land purchased by Bennett in 1871, the year before his death.
+              It sits opposite the northern Fort Washington Avenue entrance to
+              the 181st Street subway station on the IND Eighth Avenue Line,
+              serviced by the A train.
+            </p>
+            <p class="me-5">
+              The park, which opened in 1929, was built on the site of Fort
+              Washington, from which the Continental Army delayed the advance of
+              British troops in 1776. The commemorative marble, bronze and
+              granite stele, with sculpture by Charles R. Lamb, is located on
+              the eastern perimeter wall of the park, and was dedicated in 1901.
+            </p>
+            <p class="me-5">
+              On the west side of the park lies an outcropping of Manhattan
+              schist which is the highest natural point in Manhattan - 265 feet
+              (81 m) above sea level - with a square stone marker attesting to
+              the fact.[5] The schist is part of the bedrock foundation of New
+              York City, which allows the construction of skyscrapers where it
+              lies close to the surface.
+            </p> -->
+          </div>
+          <figure>
+            <img
+              class="align-middle"
+              width="540px"
+              height="433px"
+              style="object-fit: cover"
+              src="assets/James_Gordon_Bennett_Sr.jpg"
+              alt=""
+            />
+            <figcaption class="figure-caption mt-1">
+              James Gordon Bennet Sr
+            </figcaption>
+          </figure>
+        </article>
+        <h2>Bennet Park</h2>
+        <hr />
+        <img src="" alt="" />
+        <article class="top d-flex justify-content-between"></article>
+      </section>
+    </main>
   </body>
 </html>
