--- a/history.html
+++ b/history.html
@@ -25,7 +25,19 @@
         height: 433px;
       }
     }
-    @media screen and (max-width: 1199px) {
+    @media screen and (min-width: 1100px) {
+      .james {
+        width: 340px;
+        height: 433px;
+      }
+    }
+    @media screen and (max-width: 1100px) {
+      .james {
+        width: 340px;
+        height: 433px;
+      }
+    }
+    @media screen and (max-width: 1000px) {
       .james {
         width: 340px;
         height: 433px;
