--- a/history.html
+++ b/history.html
@@ -140,7 +140,7 @@
         <article class="top d-flex justify-content-between">
           <figure>
             <img
-              class="bpark"
+              class="bpark james"
               style="object-fit: cover"
               src="assets/park.jpg"
               alt=""
