--- a/history.html
+++ b/history.html
@@ -40,6 +40,7 @@
       .top {
         flex-direction: column;
         align-items: center;
+        justify-content: center;
       }
       h2 {
         text-align: center;
