--- a/history.html
+++ b/history.html
@@ -41,6 +41,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        /* changed */
       }
       h2 {
         text-align: center;
