commit to resolve #7

--- a/history.html
+++ b/history.html
@@ -41,7 +41,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        /* changed */
+        /* changed to center */
       }
       h2 {
         text-align: center;
