Change to resolve #12

--- a/history.html
+++ b/history.html
@@ -41,7 +41,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        /* changed to center */
+        /* changed to center 2 test*/
       }
       h2 {
         text-align: center;
